# ComputeEngine

./: .gitignore  CMakeLists.txt  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cmake-multi-platform.yml  release.yml  ubuntu.yml  windows.yml
cmake/: CompilerWarnings.cmake  StandardSettings.cmake  Utils.cmake  Vcpkg.cmake
include/: data_frame.h
python/: operation_factory.py
src/: main.cpp
src/compute/: executor.cpp  operator.cpp
src/compute/include/: executor.h  operator.h
test/: CMakeLists.txt  test_after_op.cpp  test_aggregate_op.cpp  test_compare_op.cpp  test_hold_op.cpp  test_jump_op.cpp  test_math_op.cpp
